Add reader test to match writer

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,6 @@
 
 add_executable (writer writer.cxx)
 target_link_libraries (writer PRIVATE fastipc)
+
+add_executable (reader reader.cxx)
+target_link_libraries (reader PRIVATE fastipc)
