--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,5 @@
 cmake_minimum_required (VERSION 3.20)
 
-set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
 project (fastipc)
 
 add_library (fastipc STATIC)
@@ -15,8 +11,14 @@ target_sources (fastipc PRIVATE
     src/fastipc.cxx
     src/channel.hxx
 )
+target_compile_features (fastipc INTERFACE cxx_std_17)
+target_compile_features (fastipc PRIVATE cxx_std_23)
+target_compile_options (fastipc PRIVATE "-Wall" "-Wextra" "-Werror" "-Wcast-align" "-Wno-zero-length-array")
 
-add_executable (tower src/tower.cxx)
+add_executable (tower)
+target_sources (tower PRIVATE src/tower.cxx)
+target_compile_features (tower PUBLIC cxx_std_23)
+target_compile_options (tower PRIVATE "-Wall" "-Wextra" "-Werror" "-Wcast-align" "-Wno-zero-length-array")
 target_link_libraries (tower PRIVATE fastipc)
 
 add_subdirectory (test)
