--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ target_sources (fastipc PRIVATE
     src/fastipc.cxx
     src/channel.hxx
 )
+target_precompile_headers (fastipc PUBLIC include/fastipc.hxx)
 target_compile_features (fastipc INTERFACE cxx_std_17)
 target_compile_features (fastipc PRIVATE cxx_std_23)
 target_compile_options (fastipc PRIVATE "-Wall" "-Wextra" "-Werror" "-Wcast-align" "-Wno-zero-length-array")
