--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
             ldflags:
           - name: Clang/LLVM
             cc: clang-20
-            cxx: clang++-20 
+            cxx: clang++-20
             cxxflags: -stdlib=libc++
             ld: LLD
             ldflags: -lllvmlibc
@@ -27,9 +27,9 @@ jobs:
       - name: Grab more recent Clang/LLVM
         if: matrix.toolchain.name == 'Clang/LLVM'
         run: |
-            wget https://apt.llvm.org/llvm.sh
-            sudo bash ./llvm.sh 20
-            sudo apt-get update && sudo apt-get install -y clang-20 lld-20 libllvmlibc-20-dev libc++-20-dev libc++abi-20-dev
+            sudo wget -O /etc/apt/trusted.gpg.d/apt.llvm.org.asc https://apt.llvm.org/llvm-snapshot.gpg.key
+            sudo add-apt-repository -y "deb http://apt.llvm.org/$(lsb_release -sc)/ llvm-toolchain-$(lsb_release -sc)-20 main"
+            sudo apt-get update && sudo apt-get install -y --no-install-recommends clang-20 lld-20 libllvmlibc-20-dev libc++-20-dev libc++abi-20-dev
       - name: Check deps
         run: |
           cmake --version
