--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
             sudo wget -O /etc/apt/trusted.gpg.d/apt.llvm.org.asc https://apt.llvm.org/llvm-snapshot.gpg.key
             sudo add-apt-repository -y "deb http://apt.llvm.org/$(lsb_release -sc)/ llvm-toolchain-$(lsb_release -sc)-20 main"
-            sudo apt-get update && sudo apt-get install -y --no-install-recommends clang-20 lld-20 libllvmlibc-20-dev libc++-20-dev libc++abi-20-dev
+            sudo apt-get update && sudo apt-get install -y --no-install-recommends clang-20 lld-20 libllvmlibc-20-dev libc++-20-dev libc++abi-20-dev clang-tidy-20
       - name: Check deps
         run: |
           cmake --version
@@ -37,7 +37,7 @@ jobs:
           ${{ matrix.toolchain.cc }} --version
           ${{ matrix.toolchain.cxx }} --version
       - run: git config include.path ../.gitconfig
-      - name: CMake configure
+      - name: Configure
         run: |
           git configure -G Ninja \
             -DCMAKE_BUILD_TYPE=Debug \
@@ -47,9 +47,14 @@ jobs:
             -DCMAKE_LINKER_TYPE=${{ matrix.toolchain.ld }} \
             -DCMAKE_EXE_LINKER_FLAGS=${{ matrix.toolchain.ldflags }} \
             -DCMAKE_LINK_WHAT_YOU_USE=True
-      - name: CMake build
+      - name: Build
         run: git build
-      - name: CMake test
+      - name: Lint
+        if: matrix.toolchain.name == 'Clang/LLVM'
+        env:
+          CLANG_TIDY: clang-tidy-20
+        run: git clang-tidy
+      - name: Test
         env:
           CTEST_NO_TESTS_ACTION: error
         run: git test
