--- a/.gitconfig
+++ b/.gitconfig
@@ -71,7 +71,10 @@
     clang-tidy = "!\
         export GIT_ROOT=$(git rev-parse --show-toplevel); \
         git configure -DCMAKE_CXX_CLANG_TIDY=\"${CLANG_TIDY:-clang-tidy};--config-file=${GIT_ROOT}/.clang-tidy\" && \
-        cmake --build ${GIT_ROOT}/build --target all \
+        cmake --build ${GIT_ROOT}/build --target all; \
+        result=$?; \
+        git configure -UCMAKE_CXX_CLANG_TIDY > /dev/null; \
+        exit $result \
     "
 
     lint = "!\
