Test before lint to reuse build cache

--- a/.gitconfig
+++ b/.gitconfig
@@ -87,6 +87,6 @@
     pre-push = "!\
         git format && \
         git build && \
-        git lint && \
-        git test \
+        git test && \
+        git lint \
     "
